opam-version: "2.0"
synopsis: "DNS solver for ACME implementation in OCaml"
description: "A DNS solver for the ACME implementation in OCaml."
maintainer: "Michele Mu <maker@tumbolandia.net>"
authors:
  "Michele Mu <maker@tumbolandia.net>, Hannes Mehnert <hannes@mehnert.org>"
license: "BSD-2-clause"
homepage: "https://github.com/robur-coop/ocaml-letsencrypt"
bug-reports: "https://github.com/robur-coop/ocaml-letsencrypt/issues"
doc: "https://robur-coop.github.io/ocaml-letsencrypt"
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "1.2.0"}
  "letsencrypt" {= version}
  "logs"
  "fmt" {>= "0.8.7"}
  "lwt" {>= "2.6.0"}
  "dns" {>= "9.0.0"}
  "dns-tsig" {>= "9.0.0"}
  "domain-name" {>= "0.2.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/robur-coop/ocaml-letsencrypt.git"
