opam-version: "2.0"
synopsis: "ACME implementation in OCaml for MirageOS"
description: "An ACME client implementation of the ACME protocol (RFC 8555) for OCaml & MirageOS"
maintainer: "Michele Mu <maker@tumbolandia.net>"
authors:
  "Michele Mu <maker@tumbolandia.net>, Hannes Mehnert <hannes@mehnert.org>"
license: "BSD-2-clause"
homepage: "https://github.com/mmaker/ocaml-letsencrypt"
bug-reports: "https://github.com/mmaker/ocaml-letsencrypt/issues"
doc: "https://mmaker.github.io/ocaml-letsencrypt"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.2.0"}
  "letsencrypt" {= version}
  "http-mirage-client"
  "tcpip" {>= "7.0.0"}
  "mirage-time" {>= "3.0.0"}
  "duration"
  "emile" {>= "1.1"}
  "paf" {>= "0.4.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mmaker/ocaml-letsencrypt.git"
