(library
 (name le)
 (wrapped false)
 (public_name letsencrypt-mirage)
 (modules lE)
 (libraries letsencrypt http-mirage-client tcpip mirage-time duration emile))

(library
 (name le_http_server)
 (wrapped false)
 (public_name letsencrypt-mirage.http-server)
 (modules lE_http_server)
 (libraries letsencrypt letsencrypt-mirage paf.mirage))
